--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,11 @@
         "codemix/yii2-localeurls": "^1.7",
         "dmstr/yii2-adminlte-asset": "^2.1",
         "kartik-v/yii2-widget-datepicker": "@dev",
-        "johnson/yii2-webcam": "*"
+        "johnson/yii2-webcam": "*",
+        "ext-gd": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
-        "yiisoft/yii2-gii": "~2.0.0",
         "purrweb/yii2-heroku": "*"
     },
     "config": {
