--- a/.htaccess
+++ b/.htaccess
@@ -89,9 +89,12 @@ ExpiresActive On
 # Default expiration: 1 hour after request
 ExpiresDefault "now plus 1 hour"
 # CSS and JS expiration: 1 week after request
-ExpiresByType text/css "now plus 1 week"
-ExpiresByType application/javascript "now plus 1 week"
-ExpiresByType application/x-javascript "now plus 1 week"
+# ExpiresByType text/css "now plus 1 week"
+# ExpiresByType application/javascript "now plus 1 week"
+# ExpiresByType application/x-javascript "now plus 1 week"
+ExpiresByType text/css "now"
+ExpiresByType application/javascript "now"
+ExpiresByType application/x-javascript "now"
 # Image files expiration: 1 month after request
 ExpiresByType image/bmp "now plus 1 month"
 ExpiresByType image/gif "now plus 1 month"
@@ -122,13 +125,13 @@ ExpiresByType application/vnd.ms-fontobject "access plus 1 month"
  Header set Cache-Control "max-age=2592000, public"
  </filesMatch>
  <filesMatch "\.(css)$">
- Header set Cache-Control "max-age=604800, public"
+ Header set Cache-Control "max-age=0, public, must-revalidate"
  </filesMatch>
  <filesMatch "\.(js)$">
- Header set Cache-Control "max-age=216000, private"
+ Header set Cache-Control "max-age=0, private, must-revalidate"
  </filesMatch>
  <filesMatch "\.(x?html?|php)$">
- Header set Cache-Control "max-age=600, private, must-revalidate"
+ Header set Cache-Control "max-age=0, private, must-revalidate"
  </filesMatch>
 </ifModule>
 # END Cache-Control Headers
